--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -21,12 +21,16 @@
 {% block content %}
     <div class="row">
         <div class="col-md-12">
+            <div class="pull-right">
+                <h4>Signup is <input type="checkbox" {% if accountprovider.signup_is_open %}checked{% endif %} data-toggle="toggle" data-onstyle="success" data-offstyle="danger" data-on="Open" data-off="Closed" id="signup_status"></h4>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="box box-solid">
                 <div class="box-header with-border">
                     <h3>{% trans "Signups" %}</h3>
-                    <div class="pull-right">
-                        <input type="checkbox" {% if accountprovider.signup_is_open %}checked{% endif %} data-toggle="toggle" data-onstyle="success" data-offstyle="danger" data-on="Open" data-off="Closed" id="signup_status">
-                    </div>
                 </div>
                 <div class="box-body" style="min-height: 700px">
                     {% if signups %}
