--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -48,7 +48,15 @@
                                     <h4>{% trans "Grantcoin" %}</h4>
                                 </div>
                                 <div class="community-actions">
-                                    <a href="#" data-community-name='grantcoin' data-toggle="modal" data-target='#signupmodal' class="btn btn-block btn-flat btn-success">{% trans "Signup" %}</a>
+                                    {% if communitysignup.data_collect_done %}
+                                        {% if communitysignup.approved %}
+                                            <a href="#" class="btn btn-block btn-flat btn-default">{% trans "Subscribed" %}</a>
+                                        {% else %}
+                                            <a href="#" data-toggle="modal" data-target='#pendingmodal' class="btn btn-block btn-flat btn-success">{% trans "Pending" %}</a>
+                                        {% endif %}
+                                    {% else %}
+                                        <a href="#" data-community-name='grantcoin' data-toggle="modal" data-target='#signupmodal' class="btn btn-block btn-flat btn-success">{% trans "Signup" %}</a>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -246,6 +254,19 @@
           <div class="modal-footer" id="signupfooter">
             <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close" %}</button>
             <button type="button" class="btn btn-primary" id="signupsubmit">{% trans "Submit" %}</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="pendingmodal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="">{% trans "Signup to Grantcoin" %}</h4>
+          </div>
+          <div class="modal-body" id="signupbody">
+              <h4>{% trans "Please contact a Grantcoin staff on your Account Status" %}</h4>
           </div>
         </div>
       </div>
