--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -76,7 +76,9 @@
                     <div class="col-md-3">
                         <div class="community-wrapper">
                             <div class="community community-add">
-                                <i class="fa fa-plus community-add-fa" style=""></i>
+                                <a href="#"  data-toggle="modal" data-target='#accountaddmodal'>
+                                    <i class="fa fa-plus community-add-fa" style=""></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -265,8 +267,25 @@
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4 class="modal-title" id="">{% trans "Signup to Grantcoin" %}</h4>
           </div>
-          <div class="modal-body" id="signupbody">
+          <div class="modal-body">
               <h4>{% trans "Please contact a Grantcoin staff on your Account Status" %}</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="accountaddmodal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="">{% trans "Contact to add your organization account" %}</h4>
+          </div>
+          <div class="modal-body">
+              {% include "autosignup/accountaddform.html" %}
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close" %}</button>
+            <button type="button" class="btn btn-primary" id="accountaddsubmit">{% trans "Submit" %}</button>
           </div>
         </div>
       </div>
@@ -418,5 +437,23 @@
         }
         return false;
     })
+    $("#accountaddsubmit").click(function(){
+        var frm = $("#addaccountform");
+        $.ajax({
+            url: frm.attr('action'),
+            type: 'POST',
+            data: frm.serialize(),
+            success: function(data) {
+                $("#accountaddmodal").modal('hide');
+                $('.top-right').notify({
+                    message: { text: 'Thank you! We will contact you soon' },
+                    type: 'success'
+                }).show();
+            },
+            error: function (data) {
+                $("#addaccountform").html(data.responseText);
+            }
+        })
+    });
 </script>
 {% endblock %}
