EP-247 and EP-248 done: Update DummyDB and pulse logo

--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -31,7 +31,7 @@
                 <div class="box-body">
                     <div class="col-md-3">
                         <div class="community-wrapper">
-                            <div class="community" style="background: url('{% static "dist/img/ekata-200-logo.png" %}'); background-size: 100px 100px; background-repeat:no-repeat; background-position:center;">
+                            <div class="community" style="background: url('{% static "dist/img/DummyDB.png" %}'); background-size: 100px 100px; background-repeat:no-repeat; background-position:center 40px;">
                                 <div class="community-name">
                                     <h4>{% trans "DummyDB" %}</h4>
                                 </div>
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="community-wrapper">
-                            <div class="community" style="background: url('{% static "dist/img/grantcoin.png" %}'); background-size: 100px 100px; background-repeat:no-repeat; background-position:center;">
+                            <div class="community" style="background: url('{% static "dist/img/grantcoin.png" %}'); background-size: 100px 100px; background-repeat:no-repeat; background-position:center 40px;">
                                 <div class="community-name">
                                     <h4>{% trans "Grantcoin" %}</h4>
                                 </div>
@@ -63,9 +63,9 @@
                     </div>
                     <div class="col-md-3">
                         <div class="community-wrapper">
-                            <div class="community" style="background: url('{% static "dist/img/pulse.png" %}'); background-size: 100px 100px; background-repeat:no-repeat; background-position:center;">
+                            <div class="community" style="background: url('{% static "dist/img/pulse-heart-red.png" %}'); background-size: 100px 100px; background-repeat:no-repeat; background-position:center 40px;">
                                 <div class="community-name">
-                                    <h4>{% trans "The pulse" %}</h4>
+                                    <h4>{% trans "Pulse Points" %}</h4>
                                 </div>
                                 <div class="community-actions">
                                     <a href="#" class="btn btn-block btn-flat btn-warning">{% trans "Coming soon" %}</a>
