EP-249: Signup Page form Statuses EP-251: Change SMS auth send code as numeric only EP-252: Signup Text Change EP-253: If auto signups fails send reason to staff EP-242: Carrier do not mark passed until true, then lock result

--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -49,10 +49,12 @@
 </blockquote>
 <hr>
 {% endif %}
+<h4>Status: {{ signup.status }}</h4>
+<hr>
+{% if signup.auto_signup_fail_reason %}
+    <h4>Reason for failed autosignup: {{ signup.auto_signup_fail_reason }}</h4>
+{% endif %}
 <div class="pull-right">
-    {% if signup.approved %}
-        <button class='btn btn-flat btn-primary'>{% trans "Approved" %}</button>
-    {% else %}
-        <button class="btn btn-flat btn-danger" id='verify' data-signup-id='{{ signup.id }}'>{% trans "Approve" %}</button>
-    {% endif %}
+    <button class="btn btn-flat btn-danger" id='delete' data-signup-id='{{ signup.id }}'>{% trans "Delete" %}</button>
+    <button class="btn btn-flat btn-primary" id='edit' data-signup-id='{{ signup.id }}'>{% trans "Edit" %}</button>
 </div>
