added signup change history

--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -57,4 +57,5 @@
 <div class="pull-right">
     <button class="btn btn-flat btn-danger" id='delete' data-signup-id='{{ signup.id }}'>{% trans "Delete" %}</button>
     <button class="btn btn-flat btn-primary" id='edit' data-signup-id='{{ signup.id }}'>{% trans "Edit" %}</button>
+    <button class="btn btn-flat btn-warning" id='history' data-signup-id='{{ signup.id }}'>{% trans "History" %}</button>
 </div>
