--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -68,6 +68,28 @@
 {% endblock %}
 {% block extrascripts %}
     <script type="text/javascript">
+        function revertToHistory(history_id, history_object_id, history_date) {
+            var ans = confirm('This will change signup data to ' + history_date + '\n' + 'Are you sure?');
+            if (ans) {
+                $.ajax({
+                    url: '{% url 'autosignup:revert_to_history' %}',
+                    type: 'POST',
+                    data: {'history_id': history_id, 'history_object_id': history_object_id},
+                    success: function(data) {
+                        $('.top-right').notify({
+                            message: { text: 'Signup data reverted to ' + history_date },
+                            type: 'success'
+                        }).show();
+                    },
+                    error: function (data) {
+                        $('.top-right').notify({
+                            message: { text: 'Something went wrong!! Try again later' },
+                            type: 'warning'
+                        }).show();
+                    }
+                });
+            }
+        }
         $(document).ready(function(){
             $(document).on('click', '.signup', function(){
                 var signup_id = $(this).attr('data-signup-id');
