EBR-88: Change text "Signup for the Newsletter"

--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -176,7 +176,7 @@
 									</ul>
 								</div>
 								<div class="link-wrapper">
-									<h4>{% trans "Signup into Ekata newsletter" %}</h4>
+									<h4>{% trans "Signup for the Newsletter" %}</h4>
 									<div class="col-sm-8">
 										<input type="email" name='email_id' placeholder="Enter your email" class="emailsignup form-control">
 									</div>
