EP-255: Grantcoin Signup, send Approval email

--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -58,4 +58,7 @@
     <button class="btn btn-flat btn-danger" id='delete' data-signup-id='{{ signup.id }}'>{% trans "Delete" %}</button>
     <button class="btn btn-flat btn-primary" id='edit' data-signup-id='{{ signup.id }}'>{% trans "Edit" %}</button>
     <button class="btn btn-flat btn-warning" id='history' data-signup-id='{{ signup.id }}'>{% trans "History" %}</button>
+    {% ifequal signup.status 'approved'  %}
+        <button class="btn btn-flat btn-info" id='rapproval' data-signup-id='{{ signup.id }}'>{% trans "Resend Approval Email" %}</button>
+    {% endifequal %}
 </div>
