--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -5,7 +5,7 @@
 <hr>
 <h4>Fullname: {{ signup.user.first_name }} {{ signup.user.last_name }}</h4>
 <hr>
-<h4>Email: {{ signup.useremail }}</h4>
+<h4>Email: {{ signup.useremail }} <span class="label label-success">{% trans "Validated" %}</span></h4>
 {% if signup.email_in_globaldb %}
     <div class="alert alert-danger alert-inset">
         <p>
@@ -14,7 +14,7 @@
     </div>
 {% endif %}
 <hr>
-<h4>Phone No: {{ signup.userphone }}</h4>
+<h4>Phone No: {{ signup.userphone }} <span class="label label-info">{% trans "Mobile" %}</span> <span class="label label-success">{% trans "Validated" %}</span></h4>
 {% if signup.phone_in_globaldb %}
     <div class="alert alert-danger alert-inset">
         <p>
