--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -1,64 +1,72 @@
 {% load i18n %}
-<div class="text-center">
-    <h4>{{ signup.user.username }}</h4>
+<div class="signup-data customscroll">
+    <div class="text-center">
+        <h4>{{ signup.user.username }}</h4>
+    </div>
+    <hr>
+    <h4>Fullname: {{ signup.user.first_name }} {{ signup.user.last_name }}</h4>
+    <hr>
+    <h4>Email: {{ signup.useremail }} <span class="label label-success">{% trans "Validated" %}</span></h4>
+    {% if signup.email_in_globaldb %}
+            <p>
+                <span class="fa fa-exclamation-triangle text-red"></span>
+                {% trans "This email id was used for a previous signup" %}
+            </p>
+    {% endif %}
+    <hr>
+    <h4>Phone No: {{ signup.userphone }} <span class="label label-info">{% trans "Mobile" %}</span> <span class="label label-success">{% trans "Validated" %}</span></h4>
+    {% if signup.phone_in_globaldb %}
+            <p>
+                <span class="fa fa-exclamation-triangle text-red"></span>
+                {% trans "This mobile number was used for a previous signup" %}
+            </p>
+    {% endif %}
+    <hr>
+    <h4>Profile link: <a href="{% url 'publicusers:user' signup.user.id %}">{{ signup.user.username }}</a></h4>
+    <hr>
+    {% if signup.userimage %}
+    <h4>Uploaded image:</h4>
+    <img src="{{ signup.userimage.url }}" width="400" height="400" />
+    <hr>
+    {% endif %}
+    <h4>Info from User Data Base</h4>
+    <blockquote>
+        {{ signup.useraddress_in_db }}
+    </blockquote>
+    <hr>
+    {% if signup.useraddress_from_twilio %}
+    <h4>Info from Twilio Data Base</h4>
+    <blockquote>
+        {{ signup.useraddress_from_twilio }}
+    </blockquote>
+    {% if signup.distance_db_vs_twilio %}
+    <p>
+        <span class="fa fa-info-circle text-red"></span>
+        {% trans "Distance from database address: " %} {{ signup.distance_db_vs_twilio }}
+    </p>
+    {% endif %}
+    <hr>
+    {% endif %}
+    {% if signup.useraddress_from_geoip %}
+    <h4>Info from Geoip</h4>
+    <blockquote>
+        {{ signup.useraddress_from_geoip }}
+    </blockquote>
+    <hr>
+    {% endif %}
+    <h4>Status: {{ signup.status }}</h4>
+    <hr>
+    {% if signup.auto_signup_fail_reason %}
+        <h4>Reason for failed autosignup: {{ signup.auto_signup_fail_reason }}</h4>
+    {% endif %}
 </div>
-<hr>
-<h4>Fullname: {{ signup.user.first_name }} {{ signup.user.last_name }}</h4>
-<hr>
-<h4>Email: {{ signup.useremail }} <span class="label label-success">{% trans "Validated" %}</span></h4>
-{% if signup.email_in_globaldb %}
-    <div class="alert alert-danger alert-inset">
-        <p>
-            {% trans "This email id was used for a previous signup" %}
-        </p>
+<div class="signup-actions">
+    <div class="pull-right">
+        <button class="btn btn-flat btn-danger" id='delete' data-signup-id='{{ signup.id }}'>{% trans "Delete" %}</button>
+        <button class="btn btn-flat btn-primary" id='edit' data-signup-id='{{ signup.id }}'>{% trans "Edit" %}</button>
+        <button class="btn btn-flat btn-warning" id='history' data-signup-id='{{ signup.id }}'>{% trans "History" %}</button>
+        {% ifequal signup.status 'approved'  %}
+            <button class="btn btn-flat btn-info" id='rapproval' data-signup-id='{{ signup.id }}'>{% trans "Resend Approval Email" %}</button>
+        {% endifequal %}
     </div>
-{% endif %}
-<hr>
-<h4>Phone No: {{ signup.userphone }} <span class="label label-info">{% trans "Mobile" %}</span> <span class="label label-success">{% trans "Validated" %}</span></h4>
-{% if signup.phone_in_globaldb %}
-    <div class="alert alert-danger alert-inset">
-        <p>
-            {% trans "This mobile number was used for a previous signup" %}
-        </p>
-    </div>
-{% endif %}
-<hr>
-<h4>Profile link: <a href="{% url 'publicusers:user' signup.user.id %}">{{ signup.user.username }}</a></h4>
-<hr>
-{% if signup.userimage %}
-<h4>Uploaded image:</h4>
-<img src="{{ signup.userimage.url }}" width="400" height="400" />
-<hr>
-{% endif %}
-<h4>Info from User Data Base</h4>
-<blockquote>
-    {{ signup.useraddress_in_db }}
-</blockquote>
-<hr>
-{% if signup.useraddress_from_twilio %}
-<h4>Info from Twilio Data Base</h4>
-<blockquote>
-    {{ signup.useraddress_from_twilio }}
-</blockquote>
-<hr>
-{% endif %}
-{% if signup.useraddress_from_geoip %}
-<h4>Info from Geoip</h4>
-<blockquote>
-    {{ signup.useraddress_from_geoip }}
-</blockquote>
-<hr>
-{% endif %}
-<h4>Status: {{ signup.status }}</h4>
-<hr>
-{% if signup.auto_signup_fail_reason %}
-    <h4>Reason for failed autosignup: {{ signup.auto_signup_fail_reason }}</h4>
-{% endif %}
-<div class="pull-right">
-    <button class="btn btn-flat btn-danger" id='delete' data-signup-id='{{ signup.id }}'>{% trans "Delete" %}</button>
-    <button class="btn btn-flat btn-primary" id='edit' data-signup-id='{{ signup.id }}'>{% trans "Edit" %}</button>
-    <button class="btn btn-flat btn-warning" id='history' data-signup-id='{{ signup.id }}'>{% trans "History" %}</button>
-    {% ifequal signup.status 'approved'  %}
-        <button class="btn btn-flat btn-info" id='rapproval' data-signup-id='{{ signup.id }}'>{% trans "Resend Approval Email" %}</button>
-    {% endifequal %}
 </div>
