--- a/templates/autosignup/signups1.html
+++ b/templates/autosignup/signups1.html
@@ -21,6 +21,13 @@
 {% block content %}
     <div class="row">
         <div class="col-md-12">
+            <div class="pull-right">
+                <h4>Signup is <input type="checkbox" {% if accountprovider.signup_is_open %}checked{% endif %} data-toggle="toggle" data-onstyle="success" data-offstyle="danger" data-on="Open" data-off="Closed" id="signup_status"></h4>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="box box-solid">
                 <div class="box-header with-border"> 
                     <h3 class="box-title">{% trans "Signups" %}</h3>
@@ -46,10 +53,10 @@
                             {% endfor %}
                         </div>
                         <div class="signup-actions">
-                            <a href="{% url 'autosignup:signups_settings' %}" class="btn btn-block btn-flat btn-danger">{% trans "Settings" %}</a>
+                            <button class="btn btn-block btn-flat btn-danger">{% trans "Settings" %}</button>
                         </div>
                     </div>
-                    <div class="col-md-9" id="signup-wrapper">
+                    <div class="col-md-9">
                         {% for signup in signups  %}
                             {% if forloop.counter == 1 %}
                                 {% include "autosignup/signupinfo.html" %}
@@ -98,7 +105,7 @@
                     type: 'GET',
                     data: {'signup_id': signup_id},
                     success: function(data){
-                        $('#signup-wrapper').html(data);
+                        $('.signup-data').html(data);
                     }
                 });
             });
@@ -136,7 +143,7 @@
                     url: 'edit_signup/' + signup_id + '/',
                     type: 'GET',
                     success: function(data){
-                        $('#signup-wrapper').html(data);
+                        $('.signup-data').html(data);
                     }
                 });
             });
@@ -146,7 +153,7 @@
                     url: 'get_histories/' + signup_id + '/',
                     type: 'GET',
                     success: function(data){
-                        $('#signup-wrapper').html(data);
+                        $('.signup-data').html(data);
                     }
                 });
             });
@@ -162,7 +169,7 @@
                             type: 'GET',
                             data: {'signup_id': signup_id},
                             success: function(data){
-                                $('#signup-wrapper').html(data);
+                                $('.signup-data').html(data);
                             }
                         });
                     },
