fixed addresscompare utility

--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -31,6 +31,7 @@
                             <option value="approved">{% trans "Approved" %}</option>
                             <option value="declined">{% trans "Declined" %}</option>
                         </select>
+                        <a href="{% url 'autosignup:signups_settings' %}" class="btn btn-box-tool"><i class="fa fa-wrench"></i></a>
                     </div><!-- /.box-tools -->
                 </div>
                 <div class="box-body" style="min-height: 500px" id="signupboxbody">
