--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -111,19 +111,32 @@
             });
             $(document).on('click', '#delete', function(){
                 var signup_id = $(this).attr('data-signup-id');
-                $.ajax({
-                    url: '{% url 'autosignup:delete_signup' %}',
-                    type: 'POST',
-                    data: {'signup_id': signup_id},
-                    success: function(data){
-                        $('.top-right').notify({
-                            message: { text: 'Signup deleted' },
-                            type: 'success'
-                        }).show();
-                        location.reload();
-                    }
+                swal({
+                    title: "You are about to delete this account record.",
+                    text: "Do you want to delete this record?",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#DD6B55",
+                    confirmButtonText: "Yes, delete it!",
+                    closeOnConfirm: false
+                },
+                function(){
+                    $.ajax({
+                        url: '{% url 'autosignup:delete_signup' %}',
+                        type: 'POST',
+                        data: {'signup_id': signup_id},
+                        success: function(data){
+                            swal({
+                                title: "Deleted!",
+                                text: "Record has been deleted.",
+                                type: "success"
+                            }, function () {
+                                location.reload();
+                                }
+                            );
+                        }
+                    });
                 });
-                return false;
             });
             $(document).on('click', '#rapproval', function(){
                 var signup_id = $(this).attr('data-signup-id');
@@ -197,6 +210,9 @@
             var sfilter = $('#sfilter').val();
             if (username.length > 1) {
                 $("#signupboxbody").load('{% url 'autosignup:search_signup' %}?sfilter=' + sfilter + '&username=' + username);
+            }
+            else {
+                $("#signupboxbody").load('{% url 'autosignup:filter_signup' %}?sfilter=' + sfilter);
             }
         });
     </script>
