added returned value to a js function

--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -137,6 +137,7 @@
                         }
                     });
                 });
+                return false;
             });
             $(document).on('click', '#rapproval', function(){
                 var signup_id = $(this).attr('data-signup-id');
